# hsordle

./: LICENSE  README.md  hsordle.cabal  wordle.cabal
app/: Helper.hs  Main-linux.hs  Main-windows.hs  Main.hs  Play.hs  Utils.hs  Wordle.hs
