cabal-version:      2.4
name:               hsordle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: wordle in haskell

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports: https://github.com/g8row/hsordle

-- The license under which the package is released.
-- license: LICENSE
author:             guroww
maintainer:         aliogu23@gmail.com

extra-source-files: CHANGELOG.md

executable hsordle
    if(os(windows))
        main-is:          Main-windows.hs
        build-depends:    base >=4.9, lens, random, containers, Win32
    else
        main-is:          Main-linux.hs
        build-depends:    base >=4.9, lens, random, containers 
     
    other-modules:    Helper Wordle Utils Play
    hs-source-dirs:   app
    default-language: Haskell2010
