cabal-version:      2.4
name:               wordle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             guroww
maintainer:         aliogu23@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable wordle
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    if(os(windows))
        main-is:          Main-windows.hs
        build-depends:    base >=4.9, lens, random, containers, Win32
    elif(os(linux))
        main-is:          Main-linux.hs
        build-depends:    base >=4.9, lens, random, containers 
     
    other-modules:    Helper Wordle Utils Play
    hs-source-dirs:   app
    default-language: Haskell2010
